Agregar controlador y DTO para gestionar movimientos de caja, incluyendo registro de entradas y salidas, y obtención de historial completo con totales segregados.